# src/swagger.json
@@ -127,9 +127,9 @@
         "description": "플랜을 등록 할 수 있습니다.",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
-            "description": "accessToken",
+            "description": "Authorization",
             "required": true,
             "type": "string"
           },
@@ -221,9 +221,9 @@
         "description": "해당 일자의 플랜 리스트를 조회 할 수 있습니다.",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
-            "description": "accessToken",
+            "description": "Authorization",
             "required": true,
             "type": "string"
           },
@@ -368,9 +368,9 @@
             "type": "string"
           },
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
-            "description": "accessToken",
+            "description": "Authorization",
             "required": true,
             "type": "string"
           },
@@ -462,9 +462,9 @@
             "type": "string"
           },
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
-            "description": "accessToken",
+            "description": "Authorization",
             "required": true,
             "type": "string"
           },
@@ -502,9 +502,9 @@
         "description": "검색어를 이용하여 도서를 검색할 수 있습니다.",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "Authorization",
             "in": "header",
-            "description": "accessToken",
+            "description": "Authorization",
             "required": true,
             "type": "string"
           },
@@ -599,6 +599,70 @@
                 "name": "main"
               }
             }
+          }
+        }
+      }
+    },
+    "/api/record/{planId}": {
+      "put": {
+        "tags": [
+          "Record"
+        ],
+        "description": "오늘의 플랜 달성을 변경할 수 있습니다.",
+        "parameters": [
+          {
+            "name": "planId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Authorization",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "data",
+            "in": "body",
+            "description": "업데이트 할 목표 데이터",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "currentPage": {
+                  "type": "number",
+                  "example": 300
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "목표 달성 성공, 플랜 달성 성공여부",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "plan.status = success"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "플랜이 이미 실패이거나 삭제 된 경우, 변경할 recordStatus가 동일 한 경우"
+          },
+          "404": {
+            "description": "플랜이 없는 경우"
           }
         }
       }
